# Multi-Agent-UniversalFramework

./: .gitignore  Agent设计思路.md  CLAUDE.md  README.md  auth_agentrag.html  config.py  main.py  pyproject.toml  requirements.txt  test_api.sh  test_minio_list.py  upgrade_pyproject.py
.claude/: CLAUDE.md  settings.json
app/: admin_routes.py  agent_definitions.py  async_create_agent.py  async_ensure_user_skills_init.py  async_get_index.py  async_load_model.py  async_tools.py  auth.py  datacleaning.py  document_event_bus.py  document_processor.py  index_manager.py  knowledge_graph.py  middleware.py  milvus_manager.py  node_parser_factory.py  pg_database.py  planning_middleware.py  pydantic_models.py  retrieval.py  skill_router.py  status_handler.py  task_context.py  trace_context.py
app/agents/: __init__.py  agent_definitions.py  async_create_agent.py
app/documents/: __init__.py  document_processor.py  document_status.py  index_manager.py  retrieval.py
app/evaluation/: agent_eval_results.json  offline_eval_agent.py  offline_eval_rag.py  online_eval.py  rag_eval_results.json
app/evaluation/.deepeval/: .deepeval_telemetry.txt
app/evaluation/datasets/: agent_datasets.json  rag_datasets.json
app/evolution/: __init__.py  _state.py  admin_router.py  agent_generator.py  evolution_manager.py  gap_detector.py  hot_reloader.py  types.py  validator.py
app/gateway/: __init__.py  circuit_breaker.py  gateway_middleware.py  health_probe.py  model_gateway.py  rate_limit_middleware.py  types.py
app/harness/: __init__.py  dead_letter.py  event_bus.py  subagent_hot_reloader.py  task_executor.py  tool_hot_reloader.py  trace_context.py
app/hooks/: __init__.py  approval_guard_hook.py  delegation_hook.py  factory.py  journal_hook.py  types.py
app/prompts/: __init__.py  agent_generation.py  executor_prompt.py  gap_detection.py  triage_prompt.py
app/readers/: __init__.py  mineru_reader.py
app/routes/: admin_routes.py  auth_routes.py  chat_routes.py  document_routes.py  session_routes.py  task_routes.py  upload_routes.py  workflow_routes.py
app/schemas/: __init__.py  registry.py
app/skills/: init_skill.py  tools.py
app/skills/business/: AGENT.md  SKILL.md
app/skills/engineering/: AGENT.md  SKILL.md
app/skills/finance/: AGENT.md  SKILL.md
app/skills/hr/: AGENT.md  SKILL.md
app/stores/: __init__.py  milvus_manager.py  neo4j_manager.py  pg_database.py  redis_manager.py
app/subagents/email_delivery_specialist/: AGENT.md
app/subagents/general/: AGENT.md
app/subagents/recruitment_analytics/: AGENT.md
app/subagents/recruitment_approval/: AGENT.md
app/subagents/recruitment_interview/: AGENT.md
app/subagents/recruitment_job/: AGENT.md
app/subagents/recruitment_offer/: AGENT.md
app/subagents/recruitment_resume/: AGENT.md
app/subagents/recruitment_talent/: AGENT.md
app/tools/: __init__.py  _registry.py  approval.py  common.py  generated_async_send_email.py  graph_query.py  knowledge.py  moka_analytics.py  moka_candidate.py  moka_client.py  moka_interview.py  moka_job.py  moka_offer.py  moka_resume.py  read_journal.py  request_approval.py  resources.py  task.py  task_query.py
app/utils/: argon2id.py  credentials_encryption_decrypt.py  file_hash.py  jwt.py
app/workflow/: __init__.py  engine.py  models.py  reimbursement.py
docs/: Agent设计文档.md  agent-design.md  实时状态系统设计方案.md  项目经历总结.md
download_model/: download_model.py
