[project]
name = "agentrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "accelerate==1.12.0",
    "acres==0.5.0",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic>=0.77.0",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg==0.31.0",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "banks==2.2.0",
    "bcrypt==4.0.1",
    "beautifulsoup4==4.14.3",
    "blis==1.3.3",
    "build==1.3.0",
    "cachetools==6.2.4",
    "catalogue==2.0.10",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "chromadb==1.4.0",
    "ci-info==0.3.0",
    "click==8.3.1",
    "cloudpathlib==0.23.0",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "confection==0.1.5",
    "configobj==5.0.9",
    "configparser==7.2.0",
    "cryptography==46.0.3",
    "cymem==2.0.13",
    "dataclasses-json==0.6.7",
    "deepagents>=0.5.9",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "dirtyjson==1.0.8",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "docx2txt==0.9",
    "dotenv==0.9.9",
    "durationpy==0.10",
    "ecdsa==0.19.1",
    "et-xmlfile==2.0.0",
    "etelemetry==0.3.1",
    "expiringdict==1.2.2",
    "fastapi==0.127.0",
    "filelock==3.20.1",
    "filetype==1.2.0",
    "fitz==0.0.1.dev2",
    "flatbuffers==25.12.19",
    "frontend==0.0.3",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "google-auth>=2.45.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.0",
    "griffe==1.15.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "idna==3.13",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kubernetes>=34.1.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.3",
    "langchain-core==1.3.2",
    "langchain-protocol==0.0.14",
    "langchain-huggingface==1.2.0",
    "langchain-openai==1.1.6",
    "langchain-text-splitters==1.1.1",
    "langfuse==4.2.0",
    "langgraph>=1.1.10",
    "langgraph-checkpoint==4.0.3",
    "langgraph-checkpoint-postgres==3.0.3",
    "langgraph-prebuilt==1.0.12",
    "langgraph-sdk>=0.3.1",
    "llama-cloud==0.1.35",
    "llama-cloud-services==0.6.54",
    "llama-index==0.14.10",
    "llama-index-cli==0.5.3",
    "llama-index-core==0.14.12",
    "llama-index-embeddings-huggingface==0.6.1",
    "llama-index-embeddings-huggingface-api==0.4.1",
    "llama-index-embeddings-openai==0.5.1",
    "llama-index-indices-managed-llama-cloud==0.9.4",
    "llama-index-instrumentation==0.4.2",
    "llama-index-llms-huggingface==0.6.1",
    "llama-index-llms-openai==0.6.12",
    "llama-index-llms-openai-like==0.5.3",
    "llama-index-node-parser-topic==0.4.0",
    "llama-index-readers-file==0.5.6",
    "llama-index-readers-llama-parse==0.5.1",
    "llama-index-utils-huggingface==0.4.1",
    "llama-index-vector-stores-chroma==0.5.5",
    "llama-index-vector-stores-milvus==0.9.6",
    "llama-index-workflows==2.11.5",
    "llama-parse==0.6.54",
    "looseversion==1.3.0",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "modelscope==1.33.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "murmurhash==1.0.15",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nibabel==5.3.3",
    "nipype==1.10.0",
    "nltk==3.9.2",
    "numpy!=2.4.0, >=2.4",
    "oauthlib==3.3.1",
    "onnxruntime==1.23.2",
    "openai==2.14.0",
    "openinference-instrumentation==0.1.46",
    "openinference-instrumentation-llama-index==4.3.9",
    "openinference-semantic-conventions==0.1.28",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.41.0",
    "opentelemetry-exporter-otlp-proto-common==1.41.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.41.0",
    "opentelemetry-exporter-otlp-proto-http==1.41.0",
    "opentelemetry-instrumentation==0.62b0",
    "opentelemetry-proto==1.41.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-semantic-conventions==0.62b0",
    "orjson==3.11.8",
    "ormsgpack==1.12.2",
    "overrides==7.7.0",
    "packaging==26.2",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "pathlib==1.0.1",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "posthog==5.4.0",
    "preshed==3.0.12",
    "propcache==0.4.1",
    "protobuf==6.33.2",
    "prov==2.1.1",
    "psutil==7.2.0",
    "psycopg[binary]==3.3.2",
    "psycopg-pool==3.3.0",
    "puremagic==1.30",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.3",
    "pycparser==2.23",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydot==4.0.1",
    "pygments==2.19.2",
    "pymilvus==2.6.9",
    "pyparsing==3.3.1",
    "pypdf==6.5.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.21",
    "pytz==2025.2",
    "pyxnat==1.6.4",
    "pyyaml==6.0.3",
    "rdflib==7.5.0",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "sentence-transformers==5.2.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "simplejson==3.20.2",
    "six==1.17.0",
    "smart-open==7.5.1",
    "sniffio==1.3.1",
    "soupsieve==2.8.1",
    "spacy==3.8.11",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "spacy-pkuseg==1.0.1",
    "sqlalchemy==2.0.45",
    "srsly==2.5.2",
    "sse-starlette==3.0.4",
    "starlette==0.50.0",
    "striprtf==0.0.26",
    "sympy==1.14.0",
    "tavily==1.1.0",
    "tenacity==9.1.4",
    "thinc==8.3.11",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
    "traits==7.1.0",
    "transformers==4.57.3",
    "typer==0.21.0",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.40.0",
    "wasabi==1.1.3",
    "watchfiles==1.1.1",
    "weasel==0.4.3",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "wrapt==1.17.3",
    "xxhash==3.7.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
    "redis>=5.3.0",
    "pymupdf==1.27.2.2",
    "langchain-deepseek==1.0.1",
    "llama-index-llms-deepseek==0.3.0",
    "deepeval>=3.9.6",
    "miniopy-async>=1.21.1",
    "neo4j>=5.28.0",
]
